# steam

./: README.md  detect.py  gen.py  pyproject.toml  requirements.txt
attack/: call_openai.py  const.py  deepseek_translate.py  google_translate.py  openai_translate.py  translate.py
data/dataset/: dl_val_data.py  mc4.en.val.jsonl
data/dictionary/: build_dictionary.py  build_dictionary.sh  utils.py
evaluation/: eval_detection.py  eval_length_classification.py
evaluation/common/: config.sh  languages.sh  utils.sh
evaluation/scripts/: compute_gamma_lang.sh  eval_length_classification.sh  evaluate_detection_cwra.sh  evaluate_detection_holdout.sh  evaluate_detection_steam.sh  evaluate_detection_translate.sh  generate_human_holdout.sh  generate_human_translate.sh  generate_mapping.sh  generate_pivot_translate.sh  generate_watermark_cwra.sh  generate_watermark_holdout.sh  generate_watermark_translate.sh  run_attacker_defender.sh  run_steam.sh  run_steam_pivot.sh  train_watermodel.sh  train_watermodel_10K.sh
plots/: average_token_distribution.py  plot_auc_tokens.py  plot_lang_coverage.py
plots/common/: __init__.py  config.py  palettes.py  utils.py
plots/scripts/: get_averaged_tokens_distribution.sh  plot_auc_tokens.sh  xsir_mapping_with_lang_stats.sh
steam/: back_translation_languages.txt  bayesian_optimization.py  compute_gamma_lang.py  detector.py  language_codes.py  language_features.py  realtime_backtranslation.py  realtime_deepseek_backtranslation.py  realtime_openai_backtranslation.py
watermarks/kgw/: extended_watermark_processor.py  (+1 more)
(+9 files in other folders)
